--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TaskMaster Test</string>
+    <string name="app_name">TaskMaster</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="server_client_id" translatable="false">987213376728-omjbes2choredlhskhldni70loepq15v.apps.googleusercontent.com</string>
